--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "better-sqlite3": "^9.2.2",
     "node-cron": "^3.0.3",
     "uuid": "^9.0.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "ssh2": "^1.15.0",
+    "crypto": "^1.0.1"
   }
 }
